Profile endpoint separation
